# ultralytics_ros

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Pipfile  README.md  package.xml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: docker-build-check-bot.yml  docker-deploy-bot.yml  formatter.yml  humble-ci.yml  humble-docker-build-check.yml  humble-docker-deploy.yml  melodic-ci.yml  melodic-docker-deploy.yml  noetic-ci.yml  noetic-docker-build-check.yml  noetic-docker-deploy.yml
docker/: Dockerfile  build.sh  run.sh
include/predict_with_cloud_node/: predict_with_cloud_node.h
include/tracker_with_cloud_node/: tracker_with_cloud_node.h
launch/: kitti_predict.launch  kitti_predict_with_cloud.launch  kitti_tracker.launch  kitti_tracker.launch.xml  kitti_tracker_with_cloud.launch  kitti_tracker_with_cloud.launch.xml  predict.launch  predict_with_cloud.launch  run.launch  tracker.launch  tracker.launch.xml  tracker_with_cloud.launch  tracker_with_cloud.launch.xml  traffic_light_detection.launch
msg/: YoloResult.msg
ros2bag/kitti_2011_09_26_drive_0106_synced/: kitti_2011_09_26_drive_0106_synced.db3  kitti_2011_09_26_drive_0106_synced_0.db3  metadata.yaml
rosbag/: kitti_2011_09_26_drive_0106_synced.bag
rviz/: default.rviz  kitti.rviz
rviz2/: default.rviz  kitti.rviz
script/: .pylintrc  predict_node.py  tracker_node.py  traffic_light_detection.py  yolo_node.py
src/: predict_with_cloud_node.cpp  tracker_with_cloud_node.cpp
ultralytics_ros/: tracker_node.py
