<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>ultralytics_ros</name>
  <version>0.0.0</version>
  <description>The ultralytics_ros package</description>
  <maintainer email="alpaca.zip@gmail.com">Alpaca-zip</maintainer>
  <license>AGPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
